--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 background-color: #e4d6ce; 
-background-image: url(../img/paisley.webp);
+background-image: url(paisley.webp);
 color:#524b46; 
 font-size: 50px; 
 font-family: 'la legende de korra', 'Book antiqua';
