--- a/style.css
+++ b/style.css
@@ -3,17 +3,17 @@ background-color: #e4d6ce;
 background-image: url(paisley.webp);
 color: #524b46; 
 font-size: 50px; 
-font-family: 'la legende de korra', 'Book antiqua';
+font-family: la legende de korra, Book antiqua;
 }
 h1 {
 margin-bottom: 0px;
 }
 h2 {
-font-family: 'port credit', 'Garamond';
+font-family: yeah but when i do it, Garamond;
 font-size: 37px;
 }
 p {
-font-family: 'port credit', 'Garamond'; 
+font-family: yeah but when i do it, Garamond; 
 font-size: 27px;
 }
 img {
